--- a/a_EditorObrazku.dproj
+++ b/a_EditorObrazku.dproj
@@ -101,6 +101,8 @@
         <VerInfo_AutoIncVersion>true</VerInfo_AutoIncVersion>
         <Icon_MainIcon>a_EditorObrazku_Icon.ico</Icon_MainIcon>
         <Debugger_RunParams>administrace_editor_obrazku 4737147418474234741847423 ano</Debugger_RunParams>
+        <VerInfo_Build>1</VerInfo_Build>
+        <VerInfo_Keys>CompanyName=;FileDescription=$(MSBuildProjectName);FileVersion=1.0.0.1;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
